made destination and location fields required

--- a/index.html
+++ b/index.html
@@ -19,43 +19,44 @@
   </head>
   <body>
     <header class="green-box">
-        <h1>Vacation Destinations WishList</h1>
-        <p>Found exciting places to visit on your next vacation? Use the form below to add them to your wishlist</p>
+      <h1>Vacation Destinations WishList</h1>
+      <p>
+        Found exciting places to visit on your next vacation? Use the form below
+        to add them to your wishlist
+      </p>
     </header>
 
     <div class="container">
-        <section class="red-box">
-            <div class="mb-3">
-                <label for="destinationName" class="form-label">Destination name</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter the name of the destination">
-            </div>
-            <div class="mb-3">
-                <label for="location" class="form-label">Location</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Where is it located?">
-            </div>
-            <div class="mb-3">
-                <label for="photo" class="form-label">Photo</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Description</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Describe your destionation"></textarea>
-            </div>
-            <button type="button" class="btn btn-primary">Add to list</button>
-        </section>
+      <section class="red-box">
+        <div class="mb-3">
+          <label for="destinationName" class="form-label">Destination name</label>
+          <input required type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter the name of the destination"
+          />
+        </div>
+        <div class="mb-3">
+          <label required for="location" class="form-label">Location</label>
+          <input required type="text" class="form-control" id="exampleFormControlInput1" placeholder="Where is it located?"/>
+        </div>
+        <div class="mb-3">
+          <label for="photo" class="form-label">Photo</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"/>
+        </div>
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Describe your destionation"></textarea>
+        </div>
+        <button type="button" class="btn btn-primary">Add to list</button>
+      </section>
 
-        <section class="blue-box">
-            <section class="purple-box">
-                <h5 id="destination-details">Enter destination details</h5>
-            </section>
-            <section class="orange-box"></section>
+      <section class="blue-box">
+        <section class="purple-box">
+          <h5 id="destination-details">Enter destination details</h5>
         </section>
+        <section class="orange-box"></section>
+      </section>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+    </script>
   </body>
 </html>
