removed required from label

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           />
         </div>
         <div class="mb-3">
-          <label required for="location" class="form-label">Location</label>
+          <label for="location" class="form-label">Location</label>
           <input required type="text" class="form-control" id="exampleFormControlInput1" placeholder="Where is it located?"/>
         </div>
         <div class="mb-3">
